--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="ISO-8859-1" ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Frameset//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-frameset.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:h="http://java.sun.com/jsf/html">
+	xmlns:h ="http://java.sun.com/jsf/html">
 
 <h:head>
-	<title>Login</title>
+	<title>INDEX</title>
 </h:head>
 
 <h:body>
@@ -12,6 +12,8 @@
 		<h:outputLabel value="JSF aqui !"></h:outputLabel>
 		<br/>
 		<h:inputText ></h:inputText>
+		<h1>titulo teste</h1>
+		<h:commandButton value="tst"></h:commandButton>
 
 	</h:form>
 
