--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -12,15 +12,18 @@
 		<h:panelGrid columns="2" width="5">
 			<h1>User Cadastre</h1>
 			<h:outputLabel/>
+			<h:outputLabel value="Id "/>			
+			<h:inputText value="#{pessoaBean.pessoa.id}" readonly="true"/>
 			<h:outputLabel value="Nome: "/>			
 			<h:inputText value="#{pessoaBean.pessoa.nome}"/>		
 			<h:outputLabel value="Sobrenome:"/>		
 			<h:inputText value="#{pessoaBean.pessoa.sobrenome}"/>			
 			<h:outputLabel value="Idade: "/>			
-			<h:inputText value="#{pessoaBean.pessoa.idade}"/>
+			<h:inputText value="#{pessoaBean.pessoa.idade}" />
 			<h:outputLabel/>
-			<h:commandButton value="Salvar"  action="#{pessoaBean.salvar}"/>
 		</h:panelGrid>
+			<h:commandButton value="Salvar"  action="#{pessoaBean.salvar}"/>
+			<h:commandButton value="Novo" action="#{pessoaBean.novoUser}"/>
 
 	</h:form>
 
