Delete com JPA e JSF

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -24,7 +24,8 @@
 		</h:panelGrid>
 			<h:commandButton value="Salvar"  action="#{pessoaBean.salvar}"/>
 			<h:commandButton value="Novo" action="#{pessoaBean.novoUser}"/>
-
+			<h:commandButton value="Excluir" action="#{pessoaBean.remove}"/>
+			
 	</h:form>
 
     
