AULA - Editar com setPropertyActionListener JSF e JPA

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="ISO-8859-1" ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Frameset//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-frameset.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:h ="http://java.sun.com/jsf/html">
+	xmlns:h ="http://java.sun.com/jsf/html"
+	xmlns:f ="http://java.sun.com/jsf/core">
 
 <h:head>
 	<title>INDEX</title>
@@ -25,6 +26,26 @@
 			<h:commandButton value="Salvar"  action="#{pessoaBean.salvar}"/>
 			<h:commandButton value="Novo" action="#{pessoaBean.novoUser}"/>
 			<h:commandButton value="Excluir" action="#{pessoaBean.remove}"/>
+			
+			<!-- Tabela que carrega os dados cadastrados no Banco -->
+			
+			<h:dataTable value="#{pessoaBean.pessoas}" var="p">
+				<h:column>
+					<h:outputText value="#{p.id}"/>
+				</h:column>
+				<h:column>
+					<h:outputText value="#{p.nome}"/>
+				</h:column>	
+				<h:column>
+					<h:outputText value="#{p.sobrenome}"/>
+				</h:column>	
+				<h:column>
+					<h:commandLink value="Editar">
+						<f:setPropertyActionListener value="#{p}" target="#{pessoaBean.pessoa}"/>
+					</h:commandLink>
+				</h:column>	
+						
+			</h:dataTable>
 			
 	</h:form>
 
