AULA - Remover com setPropertyActionListener JSF e JPA

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -43,6 +43,10 @@
 					<h:commandLink value="Editar">
 						<f:setPropertyActionListener value="#{p}" target="#{pessoaBean.pessoa}"/>
 					</h:commandLink>
+					<h:commandLink value="Remover" action="#{pessoaBean.remove}">
+						<f:setPropertyActionListener value="#{p}" target="#{pessoaBean.}"/>
+					</h:commandLink>
+					
 				</h:column>	
 						
 			</h:dataTable>
