--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -10,7 +10,7 @@
 
 <h:body>
 <h:form>
-		<h:panelGrid columns="2" width="5">
+		<h:panelGrid columns="2" width="5" >
 			<h1>User Cadastre</h1>
 			<h:outputLabel/>
 			<h:outputLabel value="Id "/>			
@@ -23,9 +23,9 @@
 			<h:inputText value="#{pessoaBean.pessoa.idade}" />
 			<h:outputLabel/>
 		</h:panelGrid>
-			<h:commandButton value="Salvar"  action="#{pessoaBean.salvar}"/>
+			<h:commandButton value="Salvar"  action="#{pessoaBean.salvar}" />
 			<h:commandButton value="Novo" action="#{pessoaBean.novoUser}"/>
-			<h:commandButton value="Excluir" action="#{pessoaBean.remove}"/>
+			<h:commandButton value="Apagar" action="#{pessoaBean.novoUser}" />
 			
 			<!-- Tabela que carrega os dados cadastrados no Banco -->
 			
@@ -44,7 +44,7 @@
 						<f:setPropertyActionListener value="#{p}" target="#{pessoaBean.pessoa}"/>
 					</h:commandLink>
 					<h:commandLink value="Remover" action="#{pessoaBean.remove}">
-						<f:setPropertyActionListener value="#{p}" target="#{pessoaBean.}"/>
+						<f:setPropertyActionListener value="#{p}" target="#{pessoaBean.pessoa}"/>
 					</h:commandLink>
 					
 				</h:column>	
