--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -10,9 +10,12 @@
 
 <h:body>
 <h:form>
+		<h1>User Cadastre</h1>
 		<h:panelGrid columns="2" width="5" >
-			<h1>User Cadastre</h1>
-			<h:outputLabel/>
+			<f:facet name="header">
+				<h:outputText value="Cadastro em JSF"></h:outputText>
+			</f:facet>
+			
 			<h:outputLabel value="Id "/>			
 			<h:inputText value="#{pessoaBean.pessoa.id}" readonly="true"/>
 			<h:outputLabel value="Nome: "/>			
@@ -22,10 +25,13 @@
 			<h:outputLabel value="Idade: "/>			
 			<h:inputText value="#{pessoaBean.pessoa.idade}" />
 			<h:outputLabel/>
+			<h:panelGroup>
+				<h:commandButton value="Salvar"  action="#{pessoaBean.salvar}" />
+				<h:commandButton value="Novo" action="#{pessoaBean.novoUser}"/>
+				<h:commandButton value="Apagar" action="#{pessoaBean.novoUser}" />
+			</h:panelGroup>
 		</h:panelGrid>
-			<h:commandButton value="Salvar"  action="#{pessoaBean.salvar}" />
-			<h:commandButton value="Novo" action="#{pessoaBean.novoUser}"/>
-			<h:commandButton value="Apagar" action="#{pessoaBean.novoUser}" />
+			
 			
 			<!-- Tabela que carrega os dados cadastrados no Banco -->
 			
