trabalhando com imagens com o graphicimage

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -11,6 +11,10 @@
 <h:body>
 <h:form>
 		<h1>User Cadastre</h1>
+		<h:graphicImage 
+		 height="150"
+		 width="150"
+		 value="resource/img/btm.jpg"/>
 		<h:panelGrid columns="2" width="5" >
 			<f:facet name="header">
 				<h:outputText value="Cadastro em JSF"></h:outputText>
