--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -28,6 +28,13 @@
 			<h:inputText value="#{pessoaBean.pessoa.sobrenome}"/>			
 			<h:outputLabel value="Idade: "/>			
 			<h:inputText value="#{pessoaBean.pessoa.idade}" />
+			<h:outputLabel value="Sexo: "/>
+			<h:selectOneMenu id="campoSexo" value="#{pessoaBean.pessoa.sexo}" >
+				<f:selectItem itemLabel="[Selecione]" itemValue="" noSelectionOption="true"/>
+				<f:selectItem itemLabel="Masculino" itemValue="M"/>
+				<f:selectItem itemLabel="Feminino" itemValue="F"/>
+			</h:selectOneMenu>			
+			
 			<h:outputLabel/>
 			<h:panelGroup>
 				<h:commandButton value="Salvar"  action="#{pessoaBean.salvar}" />
