checkbox e limpar campos

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -44,13 +44,15 @@
 				<f:selectItem  itemValue="JSF"/>
 				<f:selectItem  itemValue="PrimeFaces"/>				
 			</h:selectManyMenu>	
-			
+			<h:outputLabel value="Ativo:"/>
+			<h:selectBooleanCheckbox value="#{pessoaBean.pessoa.ativo}"/>			
 			
 			<h:outputLabel/>
 			<h:panelGroup>
 				<h:commandButton value="Salvar"  action="#{pessoaBean.salvar}" />
 				<h:commandButton value="Novo" action="#{pessoaBean.novoUser}"/>
-				<h:commandButton value="Apagar" action="#{pessoaBean.novoUser}" />
+				<h:commandButton value="Excluir" action="#{pessoaBean.novoUser}" />
+				<h:commandButton value="limpar" type="reset"/>
 			</h:panelGroup>
 		</h:panelGrid>
 			
