--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -5,19 +5,19 @@
 	xmlns:f ="http://java.sun.com/jsf/core">
 
 <h:head>
-	<title>Batman</title>
+	<title>Usuários</title>
 </h:head>
 
 <h:body>
 <h:form>
-		<h1>Batman</h1>
+		<h1>Usuários</h1>
 		<h:graphicImage 
 		 height="150"
 		 width="150"
-		 value="resource/img/btm.jpg"/>
+		 value="resource/img/aguia.png"/>
 		<h:panelGrid columns="2" width="5" >
 			<f:facet name="header">
-				<h:outputText value="Cadastro em JSF"></h:outputText>
+				<h:outputText value="Cadastro"></h:outputText>
 			</f:facet>
 			
 			<h:outputLabel value="Id "/>			
@@ -45,7 +45,20 @@
 				<f:selectItem  itemValue="PrimeFaces"/>				
 			</h:selectManyMenu>	
 			<h:outputLabel value="Ativo:"/>
-			<h:selectBooleanCheckbox value="#{pessoaBean.pessoa.ativo}"/>			
+			<h:selectBooleanCheckbox value="#{pessoaBean.pessoa.ativo}"/>	
+			<h:outputLabel value="Login"/>
+			<h:inputText value="#{pessoaBean.pessoa.login}"/>
+			<h:outputLabel value="Senha"/>
+			<h:inputSecret value="#{pessoaBean.pessoa.senha}"/>
+			<h:outputLabel value="Perfil: "/>
+			<h:selectOneMenu id="perfil" value="#{pessoaBean.pessoa.perfilUser}" >
+				<f:selectItem itemLabel="[Selecione]" noSelectionOption="true"/>
+				<f:selectItem itemLabel="Admin" itemValue="ADMINISTRADOR"/>
+				<f:selectItem itemLabel="Secretário" itemValue="SECRETARIO"/>
+				<f:selectItem itemLabel="Recepcionista" itemValue="RECEPCIONISTA"/>
+			
+			</h:selectOneMenu>
+					
 			
 			<h:outputLabel/>
 			<h:panelGroup>
@@ -61,7 +74,7 @@
 			
 			<h:dataTable value="#{pessoaBean.pessoas}" var="p" border="2" cellpadding="6">
 				<f:facet name="header">
-				Lista de pessoas Cadastradas
+				Usuários
 			</f:facet>
 				<h:column>
 					<f:facet name="header">
