criando tela de login/autenticando o usuario ao fazer o login

--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -5,15 +5,23 @@
 	xmlns:f ="http://java.sun.com/jsf/core">
 
 <h:head>
-	<title>Usuários</title>
+	<title>Login</title>
 </h:head>
 
 <h:body>
-<h:form id="formLogin">
+<h:form id="formLogin" style="margin-top:20%;margin-left:40%">
 		<h1>Login</h1>
+		<h:panelGrid columns="2">
+			<h:outputLabel value="Login"/>
+			<h:inputText value="#{pessoaBean.pessoa.login}"/>
+			<h:outputLabel value="Senha"/>
+			<h:inputSecret value="#{pessoaBean.pessoa.senha}"/>
+			<h:commandButton  value="Acessar" action="#{pessoaBean.logar}"/>					
+			
+		</h:panelGrid>
 		
 			
-	</h:form>
+</h:form>
 
     
     
