--- a/src/main/webapp/usuarios.xhtml
+++ b/src/main/webapp/usuarios.xhtml
@@ -64,7 +64,7 @@
 			<h:panelGroup>
 				<h:commandButton title="Salvar"  action="#{pessoaBean.salvar}" image="resource/img/salvar.png" style="width:25px"/>
 				<h:commandButton title="Novo" action="#{pessoaBean.novoUser}" image="resource/img/novo.png" style="width:20px"  />
-				<h:commandButton title="Excluir" action="#{pessoaBean.novoUser}" image="resource/img/apagar.png" style="width:20px"  />
+				<h:commandButton title="Excluir" action="#{pessoaBean.novoUser}" image="resource/img/apagar.png" style="width:20px" rendered="#{pessoaBean.permitirAcesso('ADMINISTRADOR')}"  />
 				<h:commandButton title="limpar" type="reset" image="resource/img/limpar.png" style="width:20px" />
 			</h:panelGroup>
 		</h:panelGrid>
@@ -103,7 +103,7 @@
 						<h:graphicImage value="/resource/img/editar.png" style="width:25px"/>
 					</h:commandLink>
 					<h:outputLabel value="   --    "></h:outputLabel>
-					<h:commandLink  action="#{pessoaBean.remove}" title="Excluir" >
+					<h:commandLink  action="#{pessoaBean.remove}" title="Excluir" rendered="#{pessoaBean.permitirAcesso('ADMINISTRADOR')}">
 						<f:setPropertyActionListener value="#{p}" target="#{pessoaBean.pessoa}"/>
 						<h:graphicImage value="/resource/img/apagar.png" style="width:25px"/>
 					</h:commandLink>
