--- a/src/main/webapp/lancamento.xhtml
+++ b/src/main/webapp/lancamento.xhtml
@@ -41,6 +41,31 @@
 			</h:panelGroup>
 			
 		</h:panelGrid>
+		<h:dataTable value="#{lancamentoBean.lancamentos}" var="lanc" border="3">
+			<f:facet name="header">Lista de Lancamentos</f:facet>
+			<h:column>
+				<f:facet name="header">ID</f:facet>
+				<h:outputLabel value="#{lanc.id}"/>
+			</h:column>
+			<h:column>
+				<f:facet name="header">Nota</f:facet>
+				<h:outputLabel value="#{lanc.numeroNF}"/>
+			</h:column>
+			<h:column>
+				<f:facet name="header">Origem</f:facet>
+				<h:outputLabel value="#{lanc.empresaOrigem}"/>
+			</h:column>
+			<h:column>
+				<f:facet name="header">Destino</f:facet>
+				<h:outputLabel value="#{lanc.empresaDestino}"/>
+			</h:column>
+			<h:column>
+				<f:facet name="header">Usuario</f:facet>
+				<h:outputLabel value="#{lanc.usuario.nome}"/>
+			</h:column>
+		
+		
+		</h:dataTable>
 	
 	</h:form>
 		
